--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: for_post
+name: generation_1
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -21,16 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  get: 3.24.0
   flutter:
     sdk: flutter
-  json_annotation: ^3.1.1
-  graphql: ^3.1.0
-  flutter_bloc: ^6.1.1
-  copy_with_extension: ^1.4.0
-  equatable: ^1.2.5
-  font_awesome_flutter: ^8.11.0
-  intl: ^0.16.1
-  get: ^3.24.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,11 +33,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.3.0
-  build_runner: ^1.10.11
-  json_serializable: ^3.5.1
-  copy_with_extension_gen: ^1.4.0
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,8 +46,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/image/
+  # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
