--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  get: 3.24.0
   flutter:
     sdk: flutter
-
+  json_annotation: ^3.1.1
+  equatable: ^1.2.5
+  get: 3.24.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,6 +34,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.11.1
+  json_serializable: ^3.5.1
+  artemis: ^6.18.3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
